[gd_scene load_steps=41 format=3 uid="uid://bm86u4uuihr8j"]

[ext_resource type="Texture2D" uid="uid://bjawcgfc2a4xs" path="res://assets/Rippler_(Deslizador)_fase1-Sheet.png" id="1_6ss21"]
[ext_resource type="Script" uid="uid://d16oo5gaxlng6" path="res://scripts/enemies/rippler/rippler.gd" id="1_ejfr3"]
[ext_resource type="Texture2D" uid="uid://c0mc0sk3cdd3b" path="res://assets/attack_rippler-Sheet.png" id="3_i8eec"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r1iqm"]
atlas = ExtResource("3_i8eec")
region = Rect2(54, 48, 54, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_sa188"]
atlas = ExtResource("3_i8eec")
region = Rect2(108, 48, 54, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3sqap"]
atlas = ExtResource("3_i8eec")
region = Rect2(162, 48, 54, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3k1p0"]
atlas = ExtResource("3_i8eec")
region = Rect2(162, 0, 54, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8eec"]
atlas = ExtResource("3_i8eec")
region = Rect2(162, 0, 54, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgyo3"]
atlas = ExtResource("3_i8eec")
region = Rect2(0, 24, 54, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_r26pi"]
atlas = ExtResource("3_i8eec")
region = Rect2(54, 24, 54, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jj7wd"]
atlas = ExtResource("3_i8eec")
region = Rect2(108, 24, 54, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2abk"]
atlas = ExtResource("3_i8eec")
region = Rect2(162, 24, 54, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ujwi"]
atlas = ExtResource("3_i8eec")
region = Rect2(0, 0, 54, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lm4u"]
atlas = ExtResource("3_i8eec")
region = Rect2(54, 0, 54, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xk8ur"]
atlas = ExtResource("3_i8eec")
region = Rect2(108, 0, 54, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_foew2"]
atlas = ExtResource("3_i8eec")
region = Rect2(162, 0, 54, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_unwmb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1iqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sa188")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3sqap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3k1p0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8eec")
}],
"loop": false,
"name": &"afraid",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgyo3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r26pi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jj7wd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2abk")
}],
"loop": true,
"name": &"furious",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ujwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lm4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xk8ur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_foew2")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"void",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ccigt"]
atlas = ExtResource("1_6ss21")
region = Rect2(0, 120, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_lp8mv"]
atlas = ExtResource("1_6ss21")
region = Rect2(32, 120, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_uu4ev"]
atlas = ExtResource("1_6ss21")
region = Rect2(64, 120, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_uworf"]
atlas = ExtResource("1_6ss21")
region = Rect2(0, 160, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pitl"]
atlas = ExtResource("1_6ss21")
region = Rect2(32, 160, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_7af52"]
atlas = ExtResource("1_6ss21")
region = Rect2(64, 160, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nh5a"]
atlas = ExtResource("1_6ss21")
region = Rect2(96, 160, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nn3w"]
atlas = ExtResource("1_6ss21")
region = Rect2(0, 80, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5crv"]
atlas = ExtResource("1_6ss21")
region = Rect2(32, 80, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_uuf8r"]
atlas = ExtResource("1_6ss21")
region = Rect2(64, 80, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3rnv"]
atlas = ExtResource("1_6ss21")
region = Rect2(0, 40, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_g58e1"]
atlas = ExtResource("1_6ss21")
region = Rect2(32, 40, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_4k7ya"]
atlas = ExtResource("1_6ss21")
region = Rect2(64, 40, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3em4"]
atlas = ExtResource("1_6ss21")
region = Rect2(0, 0, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ugqn"]
atlas = ExtResource("1_6ss21")
region = Rect2(32, 0, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqneu"]
atlas = ExtResource("1_6ss21")
region = Rect2(64, 0, 32, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_b03gy"]
atlas = ExtResource("1_6ss21")
region = Rect2(96, 0, 32, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_xm2mp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccigt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lp8mv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uu4ev")
}],
"loop": false,
"name": &"afraid",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uworf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pitl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7af52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nh5a")
}],
"loop": false,
"name": &"death",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nn3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5crv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuf8r")
}],
"loop": true,
"name": &"furious",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3rnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g58e1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4k7ya")
}],
"loop": true,
"name": &"run",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3em4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ugqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqneu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b03gy")
}],
"loop": true,
"name": &"walk",
"speed": 4.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_fuovj"]
radius = 84.8646

[sub_resource type="CircleShape2D" id="CircleShape2D_6ss21"]
radius = 14.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ejfr3"]
bg_color = Color(0.7019608, 0.05490196, 0.1882353, 0.44705883)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i8eec"]
bg_color = Color(0.7668713, 0, 0.14998737, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_0frua"]
radius = 18.110771

[node name="Rippler" type="CharacterBody2D" groups=["enemies"]]
script = ExtResource("1_ejfr3")

[node name="AttackAnimationSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 18)
sprite_frames = SubResource("SpriteFrames_unwmb")
animation = &"run"
autoplay = "run"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, 6)
sprite_frames = SubResource("SpriteFrames_xm2mp")
animation = &"walk"
autoplay = "run"
offset = Vector2(0, -6)

[node name="DetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_fuovj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_6ss21")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -25.0
offset_top = -30.0
offset_right = 26.0
offset_bottom = -22.0
theme_override_styles/background = SubResource("StyleBoxFlat_ejfr3")
theme_override_styles/fill = SubResource("StyleBoxFlat_i8eec")
max_value = 1.0
value = 1.0
show_percentage = false

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(1, 1)
shape = SubResource("CircleShape2D_0frua")

[node name="AttackCooldownTimer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
